# django-replit-template

./: README.md  manage.py  pyproject.toml
docs/coding_exercises/: 01_whereiscaonfire.md
nsg/: asgi.py  settings.py  urls.py  wsgi.py
